# doohor

./: .env.sample  .gitignore  New Text Document.html  README.md  doohor.html  poetry.toml  pyproject.toml  supabase_schema.sql
docs/: implementation_plan.md  walkthrough.md
frontend/: index.html  next.config.ts  package-lock.json  tutorbooking_system_backup.html
frontend/js/: api.js  app.js  config.js  state.js
frontend/js/components/: admin-view.js  auth-view.js  student-view.js  ui-utils.js
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: layout.tsx
frontend/src/app/admin/billing/: page.tsx
frontend/src/app/tenant/: layout.tsx
frontend/src/components/: Modals.tsx
frontend/src/context/: DormContext.tsx
frontend/src/utils/: api.ts
plans/: production-migration.md
scripts/: create_test_user.py  run-web  seed_db.py  setup
tests/: _verify_rebook.py  _verify_timeout_db.py  verify_connection.py  verify_integration.py
webapp/: __init__.py  config.py  db.py  dependencies.py  main.py  utils.py  utils_line.py
webapp/cmd/: __init__.py  web.py
webapp/core/: config.py  security.py
webapp/models/: __init__.py  attendance_model.py  booking_model.py  class_model.py  settings_model.py  user_model.py
webapp/routers/: auth.py  bills.py  dorms.py  orders.py  repairs.py  room_types.py  rooms.py  webhook.py
webapp/schemas/: class_booking_schema.py  user_schema.py
webapp/services/: user_service.py
webapp/web/: __init__.py
webapp/web/routers/: class_booking.py  user.py
(+14 files in other folders)
