[tool.poetry]
name = "webapp"
version = "0.1.0"
description = ""
authors = ["jakee <jakee.indapanya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.1" }
pydantic = "^2.7.4"
pydantic-settings = "^2.3.3"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
python-multipart = "^0.0.9"
supabase = "^2.31.0"
pyjwt = "^2.13.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run-web = "webapp.cmd.web:main"

[tool.ruff]
line-length = 88
select = ["E", "F", "N", "UP", "SIM", "PERF"]

[tool.ruff.format]
quote-style = "double"
